--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </style>
 </head>
 <body>
+    <h1>Frontend interview--CSS interview Question</h1>
+    <h1>Difference between display block, inline, inline-block</h1>
     <div class="block">1</div>
     <div class="block">2</div>
     <div class="block">3</div>
