--- a/index.html
+++ b/index.html
@@ -5,40 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .block{
-            background-color: red;
-            display: block;
-            height: 50px;
-            width:50px;
-        }
-        .inline{
-            background-color: green;
-            display: inline;
-            height: 50px;
-            width:50px;
-        }
-        .inlineb{
-            background-color: blue;
-            display: inline-block;
-            height: 50px;
-            width:50px;
+        input{
+            accent-color: red;
         }
     </style>
 </head>
 <body>
-    <h1>Frontend interview--CSS interview Question</h1>
-    <h1>Difference between display block, inline, inline-block</h1>
-    <div class="block">1</div>
-    <div class="block">2</div>
-    <div class="block">3</div>
-    <div class="block">4</div>
-    <div class="inline">5</div>
-    <div class="inline">6</div>
-    <div class="inline">7</div>
-    <div class="inline">8</div>
-    <div class="inlineb">9</div>
-    <div class="inlineb">10</div>
-    <div class="inlineb">11</div>
-    <div class="inlineb">12</div>
+    <input type="checkbox">
 </body>
 </html>
