--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         input{
-            accent-color: red;
+            accent-color: green;
         }
     </style>
 </head>
