--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         input{
-            accent-color: green;
+            accent-color: blue;
         }
     </style>
 </head>
