--- a/Dom-2/selector.html
+++ b/Dom-2/selector.html
@@ -7,9 +7,6 @@ On clicking Change Green all the elements with the class green should change to 
 On clicking Change Blue all the elements with the class blue should change to blue
 On clicking Change Red all the elements with the class red should change to red -->
 
-
-
-
 <html>
   <head>
     <title>Practise Selectors</title>
@@ -38,27 +35,45 @@ On clicking Change Red all the elements with the class red should change to red 
     <script>
       function changeH1() {
         // the colour of first <h1> should turn to red
-            document.getElementsByClassName("green").style=color.changeGreen
+        let red = document.getElementsByTagName("h1");
+        red[0].style.color = "red";
+        red[1].style.color = "red";
       }
 
       function changeH3() {
         // the colour of all <h3> should turn to green
+        let green = document.getElementsByTagName("h3");
+        green[0].style.color = "green";
+        green[1].style.color = "green";
       }
 
       function changeH5() {
         // the colour of all <h5> should turn to blue
+        let blue = document.getElementsByTagName("h5");
+        blue[0].style.color = "blue";
+        blue[1].style.color = "blue";
+        blue[2].style.color = "blue";
       }
 
       function changeGreen() {
         // all the elements with the class green should change to green
+        let green = document.getElementsByClassName("green");
+        green[0].style.color = "green";
+        green[1].style.color = "green";
       }
 
       function changeRed() {
         // all the elements with the class red should change to red
+        let red = document.getElementsByClassName("red");
+        red[0].style.color = "red";
+        red[1].style.color = "red";
       }
 
       function changeBlue() {
         // all the elements with the class blue should change to blue
+        let blue = document.getElementsByClassName("blue");
+        blue[0].style.color = "blue";
+        blue[1].style.color = "blue";
       }
     </script>
   </body>
