--- a/Dom-1/index.html
+++ b/Dom-1/index.html
@@ -34,9 +34,9 @@
 
 		function resetDefaults(){
 			// reset the firstname, lastname, and fullname to empty values
-			document.getElementById("firstname").innerHTML=null
-			document.getElementById("lastname").innerHTML=null
-			document.getElementById("fullname").innerHTML=null
+			document.getElementById("firstname").innerHTML=""
+			document.getElementById("lastname").innerHTML=""
+			document.getElementById("fullname").innerHTML=""
 
 		}
 	</script>
