data type update

--- a/input.html
+++ b/input.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <style>
         input{
-            accent-color: blue;
+            accent-color: red
         }
     </style>
 </head>
 <body>
-    <input type="checkbox">
+    <input type="checkbox"> checkbox color change
 </body>
 </html>
