--- a/videoaudio/index.html
+++ b/videoaudio/index.html
@@ -8,7 +8,7 @@
   <body>
     <audio src="./audio1596296840.m4a" controls muted autoplay></audio>
 
-    <video height="500" width="800" muted controls>
+    <video height="500" width="800" muted controls autoplay>
       <source src="./video1596296840.mp4" />
     </video>
 
