--- a/button.html
+++ b/button.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-.btn{
-    height: 80px;
-    width: 50%;
-    background-color: blueviolet;
-    font-size: 50px;
-    color: blanchedalmond;
-    border: none;
-    margin-top: 100px;
+      .btn {
+        height: 80px;
+        width: 50%;
+        background-color: blueviolet;
+        font-size: 50px;
+        color: blanchedalmond;
+        border: none;
+        margin-top: 100px;
+        border-radius: 20px;
+        &:hover {
+        height: 80px;
+        width: 50%;
+        background-color: rgb(21, 225, 99);
+        font-size: 50px;
+        color: blanchedalmond;
+        border: none;
+        margin-top: 100px;
+        border-radius: 20px;
+      }
+      }
 
-    &:hover{
-    height: 100px;
-    width: 60%;
-    background-color: rgb(9, 151, 87);
-    font-size: 50px;
-    color: rgb(207, 17, 128);
-    margin-top: 80px;
-    border: 1px solid red;
-    
-}
-}
-
+      
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <button class="btn">click me</button>
-</body>
+  </body>
 </html>
