--- a/centerdiv.html
+++ b/centerdiv.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        .parent{
+      /* .parent{
             height: 100vh;
             width: 100vw;
             background-color: blueviolet;
@@ -18,13 +18,33 @@
             top: 50%;
             transform: translate(-50%);
             position: absolute;
-        }
+        } */
+      .outer {
+        background-color: rgb(195, 231, 124);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+      .inner {
+        background-color: rgb(83, 83, 223);
+        width: 8%;
+        height: 200px;
+        border-radius: 50px;
+        
+
+      }
+       
     </style>
-</head>
-<body>
-    <div class="parent">
+  </head>
+  <body>
+    <!-- <div class="parent">
         <div class="child"></div>
+    </div> -->
+
+    <div class="outer">
+      <div class="inner"></div>
     </div>
 
-</body>
+  </body>
 </html>
