--- a/input.html
+++ b/input.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        input{
-            accent-color: red
-        }
+      input {
+        accent-color: red;
+      }
+      p{
+        text-align: justify;
+      }
     </style>
-</head>
-<body>
-    <input type="checkbox"> checkbox color change
-</body>
+  </head>
+  <body>
+    <input type="checkbox" /> checkbox color change
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam
+      aliquid voluptatum eveniet pariatur. Quasi, magni. Quae, ab omnis facere
+      aliquam dolore deleniti distinctio dolorum fugiat quam quasi perferendis
+      iure mollitia, possimus vitae earum ipsam corrupti! Debitis atque impedit
+      ipsum minima, quam, at ullam deleniti, nam quasi harum perspiciatis
+      placeat mollitia unde. Voluptatem ab nesciunt id sed nostrum officia nihil
+      eum hic fugiat vero magni delectus illum, porro at eos cupiditate
+      praesentium cum? Eos necessitatibus neque ipsum delectus laborum
+      laboriosam ut aspernatur. Autem, quo nemo excepturi cumque dolor vero
+      architecto vitae amet, est a eaque distinctio perspiciatis officiis natus
+      dolore? Ipsam, itaque magnam non illum labore quam culpa sapiente a
+      aliquid voluptatum dignissimos nulla doloremque temporibus neque facilis,
+      error modi! Ab id natus maiores aspernatur unde ullam fugiat et
+      exercitationem, minus nesciunt molestiae ea quos autem a! Ex, vitae
+      tempore! Excepturi ea id numquam exercitationem harum labore dolores qui,
+      inventore autem, deserunt doloremque dignissimos aut. Doloremque a
+      eligendi suscipit numquam sunt, quas necessitatibus enim maiores dolorem,
+      aliquam possimus quod in iure totam soluta natus. Deleniti, adipisci
+      pariatur quos excepturi quidem perferendis numquam, vitae, assumenda velit
+      sapiente facere error esse maxime doloremque? Eum a in deleniti, provident
+      neque aliquid modi soluta alias.
+    </p>
+  </body>
 </html>
