--- a/z-index/index.html
+++ b/z-index/index.html
@@ -7,7 +7,8 @@
     <style>
       .div1 {
         height: 80px;
-        width: 50%;
+        width: 20%;
+        margin: auto;
         background-color: rgb(164, 225, 22);
         color: rgb(15, 9, 2);
         padding: 50px;
@@ -17,14 +18,15 @@
       }
       .div2 {
         height: 80px;
-        width: 50%;
+        width: 20%;
+        margin: auto;
         background-color: rgb(255, 128, 0);
         color: rgb(27, 16, 2);
         padding: 50px;
         font-size: 30px;
         position: relative;
-        top: -50px;
-        z-index: 2;
+        top: -100px;
+
       }
     </style>
   </head>
